2007-01-08  Nishio Futoshi  <fut_nis@d3.dion.ne.jp>

	* src/specParse.py: addMacro(ipv6)

2007-01-07  Nishio Futoshi  <fut_nis@d3.dion.ne.jp>

	* src/mo_get_srpm_name.py : delete
	* src/mo_option.py: Ditto
	* src/mo_packages.py: Ditto

	* src/mo_listpackage.py: bood-bye mo_package.py
	* src/buildList.py : new file
	* src/optionParse.py : new file
	* src/DEFFILE.py.in : modify PACKAGE
	* src/specParse.py : new file

2007-01-06  Nishio Futoshi  <fut_nis@d3.dion.ne.jp>

	* src/mo_get_srpm_name.py : new file

2007-01-05  Nishio Futoshi  <fut_nis@d3.dion.ne.jp>

	* src/mo_specparse.py: new file

2007-01-04  Nishio Futoshi  <fut_nis@d3.dion.ne.jp>
	* src/DEFFILE.py.in: new file
	* src/mo_listpackage.py: Ditto
	* src/mo_option.py: Ditto
	* src/mo_packages.py: Ditto
	* README: Ditto
